<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Cadastro"
    tools:showIn="@layout/activity_cadastro">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_materia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="2dp"
                android:text="@string/materia"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/edt_materia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:ems="10"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="40dp" />

            <TextView
                android:id="@+id/txt_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="2dp"
                android:text="@string/tarefa"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="125dp" />

            <EditText
                android:id="@+id/edt_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:ems="10"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="149dp" />

            <TextView
                android:id="@+id/txt_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="2dp"
                android:text="@string/descricao"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="235dp" />

            <EditText
                android:id="@+id/edt_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:ems="10"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="259dp" />

            <TextView
                android:id="@+id/txt_entrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="2dp"
                android:text="@string/entrega"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="344dp" />

            <Button
                android:id="@+id/btn_entrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:text="@string/btn_entrega"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="396dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>